--- a/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
+++ b/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
@@ -1,5 +1,5 @@
 1. git 설치
-   - 터미널 : Bash 사용
+   - 터미널 : `Bash` 사용
      * 파일생성 : vim 
      * a : 다음 글자 
      * i : 현재 커서 
@@ -13,3 +13,15 @@
      * git commit -m "커밋 메세지" : 커밋
  
 2. 패키지 관리 도구 : npm
+   - node 설치
+   - npm은 패키지를 설치할 때 `전역` 또는 `로컬`로 설치할 수 있다.
+      * 전역 패키지 : 개발 과정에서 사용하는 도구들
+      * 로컬 패키지 : 각 프로젝트에 종속되는 패키지
+      
+3. 빌드 도구 : gulp
+   - 반복 작업을 자동화하는 빌드도구
+   
+4. 트랜스컴파일러 : babel
+   - ES5를 ES6으로 바꾸는 트랜스컴파일러. ES6, React, ES7 등 여러가지를 지원하는 범용 트랜스컴파일러
+   
+5. 코드 검토 : Lint
