Update 1. 개발 환경 셋팅.md

--- a/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
+++ b/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
@@ -12,16 +12,16 @@
      * git add : 저장소에 추가
      * git commit -m "커밋 메세지" : 커밋
  
-2. 패키지 관리 도구 : npm
+<b>2. 패키지 관리 도구 : npm</b>
    - node 설치
    - npm은 패키지를 설치할 때 `전역` 또는 `로컬`로 설치할 수 있다.
       * 전역 패키지 : 개발 과정에서 사용하는 도구들
       * 로컬 패키지 : 각 프로젝트에 종속되는 패키지
       
-3. 빌드 도구 : gulp
+<b>3. 빌드 도구 : gulp</b>
    - 반복 작업을 자동화하는 빌드도구
    
-4. 트랜스컴파일러 : babel
+<b>4. 트랜스컴파일러 : babel</b>
    - ES5를 ES6으로 바꾸는 트랜스컴파일러. ES6, React, ES7 등 여러가지를 지원하는 범용 트랜스컴파일러
    
-5. 코드 검토 : Lint
+<b?5. 코드 검토 : Lint</b>
