Update 1. 개발 환경 셋팅.md

--- a/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
+++ b/1. 개발 환경 셋팅/1. 개발 환경 셋팅.md
@@ -24,4 +24,4 @@
 <b>4. 트랜스컴파일러 : babel</b>
    - ES5를 ES6으로 바꾸는 트랜스컴파일러. ES6, React, ES7 등 여러가지를 지원하는 범용 트랜스컴파일러
    
-<b?5. 코드 검토 : Lint</b>
+<b>5. 코드 검토 : Lint</b>
