--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -1,73 +1,48 @@
 ## 1.1 변수와 상수
 `Issue : ES6에 let생김!`
-- 변수 : 이름이 붙은 값.언제든 바뀔 수 있다
-- 상수 : 변수와 마찬가지로 값을 할당받을 수 있지만, 한 번 할당한 값을 바꿀 수는 없음 상수 이름에는보통 대문자와 밑줄만 사용한다.
+- 변수 : 이름이 붙은 값. 언제든 바뀔 수 있다
+- 상수 : 변수와 마찬가지로 값을 할당받을 수 있지만, 한 번 할당한 값을 바꿀 수는 없음 상수 이름에는 보통 대문자와 밑줄만 사용한다.
 
 ## 1.2 변수와 상수 중 어떤 것을 써야할까?
 
-될 수 있으면 변수보다는 상수!
-
+- 될 수 있으면 변수보다는 상수!
 
 
 ## 1.3 식별자 이름
-
--식별자는 반드시 글자나 달러기호($), 밑줄(_)로 시작해야함
-
--식별자에는 글자와 숫자, 달러 기호, 밑줄만 쓸수 있음
-
+- 식별자는 반드시 글자나 달러기호($), 밑줄(_)로 시작해야함
+- 식별자에는 글자와 숫자, 달러 기호, 밑줄만 쓸수 있음
 - 유니코드 문자 쓸 수 있음
-
 - 예약어는 식별자로 쓸 수 없음
 
-
-
 ## 1.4 리터럴
-
-리터럴 : 값을 프로그램 안에서 직접 지정한다는 의미. 값을 만드는 방법.
-
-자바스크립트는 리터럴 값을 받아 데이터를만듦.
-
+ - 리터럴 : 값을 프로그램 안에서 직접 지정한다는 의미. 값을 만드는 방법.
+ - 자바스크립트는 리터럴 값을 받아 데이터를만듦.
+   * 리터럴과 식별자의 차이!
 
 
-리터럴과 식별자의 차이!
-
-
-
+```sh
 let room1 = "conference_room_a" // room1 은변수를 가리키는 식별자
-
-                                                "conference_room_a"은 문자열 리터럴인 동시에 room1의 값
-
+                                //  "conference_room_a"은 문자열 리터럴인 동시에 room1의 값
 let currentRoom = room1; // 이제 currentRoom의 값은 room1의 ㄱ밧("conference_room_a")와 같음
-
 currentRoom=conference_room_a; // conference_room_a 란 식별자는 존재하지 않음!
-
+```
 
 
 ## 1.5 원시 타입과 객체
-
-자바스크립트의 값은 원시 값 또는 객체임.
-
-문자열과 숫자 같은 원시타입은 불변임.
-
-원시타입 : 숫자, 문자열, 불리언, null, undefined, 심볼
+ - 자바스크립트의 값은 원시 값 또는 객체임.
+ - 문자열과 숫자 같은 원시타입은 불변임.
+   * 원시타입 : 숫자, 문자열, 불리언, null, undefined, 심볼
 
 
 
 ## 1.6 숫자
-
-자바스크립트에는 숫자형 데이터 타입이 하나밖에 없음.
-
-10진수, 2진수, 8진수, 16진수 네가지숫자형 리터럴을 인식
-
+ - 자바스크립트에는 숫자형 데이터 타입이 하나밖에 없음.
+ - 10진수, 2진수, 8진수, 16진수 네가지숫자형 리터럴을 인식
 
 
 ## 1.7 문자열
-
-자바스크립트 문자열은 유니코드 텍스트이다.
-
-문자열 리터럴에는 작은따옴표, 큰따옴표, 백틱(ES6 도입)을 사용
-
-
+ - 자바스크립트 문자열은 유니코드 텍스트이다.
+ - 문자열 리터럴에는 작은따옴표, 큰따옴표, 백틱(ES6 도입)을 사용
 
 1.7.1 이스케이프
 
