Update 1. 리터럴과 변수, 상수, 데이터 타입.md

--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -19,21 +19,17 @@
  - 자바스크립트는 리터럴 값을 받아 데이터를만듦.
    * 리터럴과 식별자의 차이!
 
-
 ```sh
-let room1 = "conference_room_a" // room1 은변수를 가리키는 식별자
+let room1 = "conference_room_a"; // room1 은변수를 가리키는 식별자
                                 //  "conference_room_a"은 문자열 리터럴인 동시에 room1의 값
-let currentRoom = room1; // 이제 currentRoom의 값은 room1의 ㄱ밧("conference_room_a")와 같음
+let currentRoom = room1; // 이제 currentRoom의 값은 room1의 값 ("conference_room_a")와 같음
 currentRoom=conference_room_a; // conference_room_a 란 식별자는 존재하지 않음!
 ```
-
 
 ## 1.5 원시 타입과 객체
  - 자바스크립트의 값은 원시 값 또는 객체임.
  - 문자열과 숫자 같은 원시타입은 불변임.
    * 원시타입 : 숫자, 문자열, 불리언, null, undefined, 심볼
-
-
 
 ## 1.6 숫자
  - 자바스크립트에는 숫자형 데이터 타입이 하나밖에 없음.
