--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -121,3 +121,30 @@ RED === ORANGE // false : 심볼은 모두 서로 다름
  delete third.speak;
  ```
 ## 1.13 Number, String, Boolean 
+ - 자바스크립트는 함수를 호출하는 즉시 임시 객체를 파괴한다
+ ```sh
+ const s = "hello";
+ s.rating = 3;
+ s.rating //undefined
+ // 일시적인 String 객체에 프로퍼티를 할당한 것!! 임시 객체는 즉시 파괴됨으로 s.rating은 undefined이다
+ ```
+## 1.14 배열
+ - 배열은 항상 순서가 있고, 키 는순차적인 숫자이다
+ - 배열 크기는 고정되지 않고, 언제든 요소를 추가하거나 제거할 수 있다.
+ - 요소의 데이터 타입을 가리지 않는다. 즉, 문자열만 쓸 수 있는 배열이라던가 숫자만 쓸 수 있는 배열 같은 개념이 없음!
+ - 배열 요소는 0으로 시작
+ 
+## 1.16 날짜
+ - 자바스크립트의 날짜와 시간은 내장된 Date 객체에서 담당
+ - 현재 날짜와 시간을  나타내는 객체를 만들 때는 new Date() 사용
+ 
+## 1.17 정규표현식
+
+## 1.18 맵과 셋 `ES6`
+
+## 1.19 데이터 타입 변환
+1. 숫자로 바꾸기
+
+2. 문자열로 변환
+
+3. 불리언으로 변환
