--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -150,12 +150,12 @@ const numStr = "33.3";
 const num = Number(numStr); // 이 행은 숫자 값을 만듦
                             // Number 객체의 인스턴스가 아님
 ```
-&nbsp;&nbsp;&nbsp;&nbsp;1.2 내장함수인 parseInt나 parseFloat 함수를 사용
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.2 내장함수인 parseInt나 parseFloat 함수를 사용
  ```sh
  const a = parseInt("16 volts", 10); // "volts"는 무시됨. 10진수 16
  ```
 
-&nbsp;&nbsp;&nbsp;&nbsp;1.3 Date 객체를 숫자로 바꿀 때는 valueOf() 메서드 사용
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.3 Date 객체를 숫자로 바꿀 때는 valueOf() 메서드 사용
  ```sh
  const a = new Date(); // 현재 날짜
  const b = a.valueOf(); // ㅋㅋ
