--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -143,8 +143,8 @@ RED === ORANGE // false : 심볼은 모두 서로 다름
 ## 1.18 맵과 셋 `ES6`
 
 ## 1.19 데이터 타입 변환
-1. 숫자로 바꾸기<br>
-   1.1 Number 객체 생성자 사용
+1. 숫자로 바꾸기
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.1 Number 객체 생성자 사용
 ```sh
 const numStr = "33.3";
 const num = Number(numStr); // 이 행은 숫자 값을 만듦
