--- a/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
+++ b/1. 리터럴과 변수, 상수, 데이터 타입/1. 리터럴과 변수, 상수, 데이터 타입.md
@@ -144,19 +144,19 @@ RED === ORANGE // false : 심볼은 모두 서로 다름
 
 ## 1.19 데이터 타입 변환
 1. 숫자로 바꾸기<br>
-1.1 Number 객체 생성자 사용
+ - Number 객체 생성자 사용
 ```sh
 const numStr = "33.3";
 const num = Number(numStr); // 이 행은 숫자 값을 만듦
                             // Number 객체의 인스턴스가 아님
 ```
 
-1.2 내장함수인 parseInt나 parseFloat 함수를 사용
+ - 내장함수인 parseInt나 parseFloat 함수를 사용
  ```sh
  const a = parseInt("16 volts", 10); // "volts"는 무시됨. 10진수 16
  ```
 
-1.3 Date 객체를 숫자로 바꿀 때는 valueOf() 메서드 사용
+ - Date 객체를 숫자로 바꿀 때는 valueOf() 메서드 사용
  ```sh
  const a = new Date(); // 현재 날짜
  const b = a.valueOf(); // ㅋㅋ
