--- a/2. 제어문/2. 제어문.md
+++ b/2. 제어문/2. 제어문.md
@@ -9,4 +9,44 @@ while(funds >1 && funds <100) {
 
 2. 블록문 (복합문) : 여러 개를 중괄호로 묶은 것이며 자바스크립트에서는 이들을 하나의 단위로 취급
 ```sh
+{// 블록문 시작
+  console.log("state1");
+  console.log("state2");
+} // 블록문을 끝냄
+
+console.log("state3");
+```
+
+ - 루프가 반복될 때마다 funds는 2만큼 늘어나고 1만큼 줄어드므로 합하면 1이 늘어남. 결국 funds 는 100이 되고 루프는 끝남
+```sh
+let funds = 50; // 시작 조건
+while(funds >1 && funds < 100) {
+  funds = funds + 2; // 
+  funds = funds -1;
+}
+```
+
+ - 제어문에는 블록을 쓰는게 일반적이지만 꼭 그래야 하는 건 아님!
+ ```sh
+ let funds = 50; // 시작조건
+ while(funds>1 && funds<100)
+  funds=funds+2;
+ ```
+ 
+3. 공백 : 대부분의 경우 자바스크립트는 줄바꿈 문자를 포함해 추가 공백을 신경 쓰즤 않음.
+
+4. 보조함수
+```sh
+<script>
+// m 이상 n 이하의 무작위 정수 반환
+function rand(m,n) {
+  return m + Math.floor((n-m+1)*Math.random());
+  }
+  
+// 여섯 개 중 하나를 무작위 반환함
+function random() {
+  return ["a", "b", "c", "d", "e", "f"]
+  [rand(0,5)];
+}
+</script>
 ```
