--- a/2. 제어문/2. 제어문.md
+++ b/2. 제어문/2. 제어문.md
@@ -1,36 +1,44 @@
 ## 2.1 제어문의 기초
 1. while 루프 : 조건을 만족하는 동안 코드를 계속 반복
 ```sh
+<script>
 let funds =50; // 시작조건
 while(funds >1 && funds <100) {
 
 }
+</script>
 ```
 
 2. 블록문 (복합문) : 여러 개를 중괄호로 묶은 것이며 자바스크립트에서는 이들을 하나의 단위로 취급
 ```sh
+<script>
 {// 블록문 시작
   console.log("state1");
   console.log("state2");
 } // 블록문을 끝냄
 
 console.log("state3");
+</script>
 ```
 
  - 루프가 반복될 때마다 funds는 2만큼 늘어나고 1만큼 줄어드므로 합하면 1이 늘어남. 결국 funds 는 100이 되고 루프는 끝남
 ```sh
+<script>
 let funds = 50; // 시작 조건
 while(funds >1 && funds < 100) {
   funds = funds + 2; // 
   funds = funds -1;
 }
+</script>
 ```
 
  - 제어문에는 블록을 쓰는게 일반적이지만 꼭 그래야 하는 건 아님!
  ```sh
+ <script>
  let funds = 50; // 시작조건
  while(funds>1 && funds<100)
   funds=funds+2;
+ </script>
  ```
  
 3. 공백 : 대부분의 경우 자바스크립트는 줄바꿈 문자를 포함해 추가 공백을 신경 쓰즤 않음.
@@ -50,3 +58,55 @@ function random() {
 }
 </script>
 ```
+
+5. if ... else 문
+
+6. do ..while 루프
+
+7. for 루프
+
+8. if문
+
+## 2.2 자바스크립트의 제어문
+
+1. 제어문의 예외
+ - break : 루프 중간에 빠져나감
+ - continue : 루프에서 다음 단계로 바로 건너뜀
+ - return : 제어문을 무시하고 현재 함수를 즉시 빠져나감
+ - thorw : 예외 핸들러에서 반드시 처리해야 할 예외를 일으킴
+2. 메타 문법 : 다른 문법을 설명하는 뭄ㄴ법
+ - 대괄호([]) : 옵션
+ - 생략 부호(...) : '여기 들어갈 내용이 더 있다'
+   * while문
+   ```sh
+   <script>
+   while(condition)
+    statement // condition이 참이면 statement를 실행함
+   </script>
+   ```
+   * if...else문
+   ```sh
+   <script>
+   if(condition)
+    statement1
+    [else
+      statement2] // condition이 참이면 statement1을 실행하고 그렇지 않고 else 부분이 있다면 statement2를 실행
+   </script>
+   ```
+   * do...while 문
+   ```sh
+   <script>
+   do
+    statement
+    while(condition);
+    // statement는 최소한 한 번 실행하고, condition이 참인 동안 반복해서 실행
+   </script>
+   ```
+   * for문
+   ```sh
+   <script>
+   for([initialization]; [condition]; [final-expression])
+    statement
+   // 루프에 들어가기 전에 initialization 실행, condition이 true인 동안 statement 실행, final-expression을 실행한 다음 condition 체크
+   </script>
+   ```
