Update 3. 표현식과 연산자.md

--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -1,1 +1,12 @@
-## 1. 연산자
+## 1. 산술 연산자
+|연산자|설명|
+|------|---|
+|+|덧셈(문자열 병합에도 쓰임)|
+|-|뺄셈|
+|/|나눗셈|
+|＊|곱셈|
+|%|나머지|
+|-|단항 부정|
+|+|단항 플러스|
+|++|전위 증가, 후위 증가|
+|--|전위 감소, 후위 감소|
