Update 3. 표현식과 연산자.md

--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -10,3 +10,29 @@
 |+|단항 플러스|
 |++|전위 증가, 후위 증가|
 |--|전위 감소, 후위 감소|
+
+## 2. 연산자 우선순위
+- 우선순위가 같은 연산자들은 오른쪽에서 왼쪽으로 또는 왼쪽에서 오른쪽으로 평가한다.
+
+### 3. 비교 연산자
+- 종류 : 일치함(===), 동등함(==), 대소 관계 세가지 타입
+
+### 4. 숫자 비교
+- 자바스크립트의 숫자는 모두 더블 형식이다
+
+### 5. 문자열 병합
+- 자바스크립트에서 + 연산자는 덧셈과 문자열 병합에 모두 사용된다.
+- 피연산자의 타입을 보고 덧셈을 할지 문자열 병합을 할지 판단함. 덧셈과 병합은 모두 왼쪽에서 오른쪽으로 평가.
+
+## 6. 논리 연산자
+- 논리 연산자는 불리언 값만 다룰 수 있으며, 불리언에는 false와 true 두 가지 값밖에 없음.
+6.1 참 같은 값과 거짓 같은 값
+   * 거짓같은 값
+      * undefined
+      * null
+      * false
+      * 0
+      * NaN
+      * '' (빈 문자열)
+      이들 외에는 모두 참 같은 값.
+## 7. AND, OR, NOT
