Update 3. 표현식과 연산자.md

--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -36,3 +36,20 @@
       * '' (빈 문자열)
       이들 외에는 모두 참 같은 값.
 ## 7. AND, OR, NOT
+ - AND (&&) : 교집합
+ - OR (||) : 합집합
+ - NOT (!) : 부정
+7.1 단축평가
+
+7.2 피연산자가 불리언이 아닐 때 논리 연산자가 동작하는 방법
+
+7.3 조건 연산자
+ - 자바스크립트의 유일한 3항 연산자
+ ```sh
+ <script>
+ const doIt = flase;
+ const result = doIt ? "Did it" : "Didn't do it";
+ </script>
+ ```
+    * 물음표 
+7.4 쉼표 연산자
