Update 3. 표현식과 연산자.md

--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -51,5 +51,41 @@
  const result = doIt ? "Did it" : "Didn't do it";
  </script>
  ```
-    * 물음표 
+   * 물음표 앞에 있는 첫 번째 피연산자(doIt)가 참 같은 값이면 이 표현식의 값은 두 번째 피연산자이며, 거짓 같은 값이면 이 표현식의 값은 세번째 피연산자이다.  
+
 7.4 쉼표 연산자
+ - 쉼표 연산자는 표현식을 결합하여 두 표현식을 평가한 후, 두 번째 표현식의 결과를 반환함.
+ ```sh
+ <script>
+ let x=0, y=10, z;
+ z = ( x++, y++);
+ </script>
+ ```
+   * 이 예제에서 x와 y는 모두 1만큼 늘어나지만 z의 값은 10, 즉 y++가 반환하는 값이다
+ - 쉼표 연산자는 for문에서 표현식을 결합할 때 사용하거나 함수에서 빠져나오기 전에 여러가지 작업을 한데 묶을 때 사용
+ 
+## 8. 연산자 그룹
+9.1 비트 연산자
+ - 비트 연산자는 숫자의 비트를 직접 조작함.
+|연산자|설명|
+|------|---|
+|&|비트 AND|
+|||비트 OR|
+|^|비트 XOR|
+|~|비트 NOT|
+|<<|왼쪽 시프트|
+|>>|오른쪽 시프트|
+|>>>|0으로 채우는 오른쪽 시프트|
+
+9.2 typeof 연산자
+ - typeof 연산자는 피연산자의 타입을 나타내는 문자열을 반환함.
+|표현식|반환값|
+|------|---|
+|typeof undefined|"undefined"|
+|typeof null|"object"|
+|typeof {}|"object"|
+|typeof true|"booleean"|
+|typeof 1|"number"|
+|typeof ""|"String"|
+|typeof Symbol()|"symbol"|
+|typeof function() {}|"function"|
