Update 3. 표현식과 연산자.md

--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -70,15 +70,14 @@
  |연산자|설명|
  |------|---|
  |&|비트 AND|
- |||비트 OR|
+ |'|'|비트 OR|
  |^|비트 XOR|
  |~|비트 NOT|
  |<<|왼쪽 시프트|
  |>>|오른쪽 시프트|
  |>>>|0으로 채우는 오른쪽 시프트|
 
-9.2 typeof 연산자
- - typeof 연산자는 피연산자의 타입을 나타내는 문자열을 반환함.
+9.2 typeof 연산자 : typeof 연산자는 피연산자의 타입을 나타내는 문자열을 반환함.
 |표현식|반환값|
 |------|---|
 |typeof undefined|"undefined"|
