--- a/3. 표현식과 연산자/3. 표현식과 연산자.md
+++ b/3. 표현식과 연산자/3. 표현식과 연산자.md
@@ -88,3 +88,73 @@
 |typeof ""|"String"|
 |typeof Symbol()|"symbol"|
 |typeof function() {}|"function"|
+
+9.3 void 연산자 : 피연산자를 평가한 후 undefined를 반환. 가끔 HTML에서 <a> 태그의 URI에 사용한다. (브라우저에서 다른 페이지로 이동하는 일을 막을 수 있음)
+  
+9.4 할당 연산자 : 변수에 값을 할당한다.
+ - 등호의 왼쪽에 있는 것은 반드시 변수, 프로퍼티, 배열 요소 중 하나여야 함
+ 
+ ## 10. 해체 할당 `ES6` : 객체나 배열을 변수로 '해체'할 수 있음.
+  - 객체를 해체할 때는 반드시 변수 이름과 객체의 프로퍼티 이름이 일치해야 한다
+ ```sh
+ <script>
+ // 객체 선언
+ const obj = {b:2, c:3, d:f};
+ 
+ // 해체 할당
+ const {a,b,c} = obj;
+ a; // undefined : obj에는 "a" 프로퍼티가 없음
+ b; // 2
+ c; // 3
+ d; // ReferenceError: "d"는 정의되지 않았음
+ </script>
+ ```
+ 
+ - 선언과 할당을 같은 문에서 실행함. 객체 해체는 할당만으로 이뤄질 수도 있지만, 그렇게 하려면 반드시 괄호를 써야 한다.
+  ```sh
+  <script>
+  const obj ={ b:2, c:3, d:4};
+  let a,b,c;
+  
+  // 에러 발생
+  {a,b,c} = obj;
+  
+  // 동작 함
+  ({a,b,c} = obj);
+  </script>
+  ```
+  
+ - 배열을 해체할 떄는 배열 요소에 대응할 변수 이름을 마음대로 쓸 수 있으며 이들은 배열 순서대로 대응한다.
+  ```sh
+  <script>
+  // 배열 선언
+  const arr = [1,2,3];
+  
+  // 배열 해체 할당
+  let [x,y] = arr;
+  x; //1
+  y; //2
+  z; // ReferneceError : "z"는 정의되지 않음
+  </script>
+  ```
+  
+  - x는 배열의 첫 번째 요소 값을, y는 두 번째 요소 값을 할당 받음. 그 뒤의 배열 요소는 모두 버려짐.
+  ```sh
+  const arr = [1, 2, 3, 4, 5];
+  let [x,y, ...rest] = arr;
+  x; //1
+  y; //2
+  rest; // [3,4,5]
+  ```
+  
+  ## 11. 객체와 배열 연산자
+|연산자|설명|
+|------|---|
+|.|점 연산자|
+|[]|대괄호 연산자|
+|in|프로퍼티 존재 연산자|
+|new|객체 인스턴스화 연산자|
+|instanceof|프로토타입 체인 테스트 연산자|
+|...|확산 연산자|
+|delete|삭제 연산자|
+
