--- a/React/1. ES6.md
+++ b/React/1. ES6.md
@@ -125,7 +125,7 @@ function logActivity(name="유수완", activity="테니스"){
    </function>
    ```
    - 화살표 함수는 this를  새로 바인딩하지 않는다. 예를 들어 다음 코드에서 this는 suwan 객체가 아니다.
-   ```sh
+   ```javascript
    <function>
    var suwan ={
       resorts: ["용평", "평창", "강촌", "강릉", "홍천"],
@@ -137,9 +137,139 @@ function logActivity(name="유수완", activity="테니스"){
       }
       
    suwan.print()  //Cannot read property 'join' of undefined 오류 발생
-      
-   
-   }
+    // this가 window 객체이기 때문에 resorts가 undefined임
    </function>
+
+    <function>
+    var suwan = {
+        reports : ["용평","평창","강촌","강릉","홍천"],
+        print : function(delay=1000){
+            setTimeout(() => { // function()대신 ()=> 사용
+                console.log(this.reports.join(","))
+            }, delay)
+        }
+    }
+
+    suwan.print() // 용평, 평창, 강촌, 강릉, 홍천
+    // 화살표 함수를 사용하면 this 영역이 제대로 유지됨
+    </function>
+
+    <function>
+        var suwan = {
+            reports : ["용평","평창","강촌","강릉","홍천"],
+            print : (delay=1000) => {  // function(...) 대신 (...) => 사용
+                setTimeout(() => {
+                    console.log(this.reports.join(","))
+                }, delay)
+            }
+        }
+    suwan.print()   //Cannot read property 'join' of undefined 오류 발생
+    // => 화살표 함수는 새로운 this 영역을 만들어내지 않는다.
+    // print 프로퍼티를 화살표 함수로 바꾼다는 것은 this가 window 객체가 된다는 뜻
+    </function>
+
+    <function>
+    // print 프로퍼티를 화살표 함수로 바꾼다는 것은 this가 window 객체가 된다는 것임
+    // this가 window인지 여부를 콘솔에 출력하는 코드 추가
+    var suwan = {
+        reports : ["용평","평창","강촌","강릉","홍천"],
+        print : (delay=1000) => {
+            setTimeout(() => {
+                console.log(this === window)
+            },delay)
+        }
+    }
+    suwan.print() // true
+    </function>
+
+    <function>
+    var suwan = {
+        reports : ["용평","평창","강촌","강릉","홍천"],
+        print : function(delay=1000) {
+            setTimeout(() => {
+                console.log(this === window)
+            },delay)
+        }
+    }
+    suwan.print() // false
+
+//존나어렵다...
+    </function>
    ```
-   
+
+## 3. ES6 트랜스파일링 
+- 바벨 사용~
+ 
+## 4. ES6 객체와 배열  
+4.1. 구조 분해를 사용한 대입
+
+4.2. 객체리터럴 개선
+```javascript
+<function>
+var name = "Tallac"
+var elevation = 9738
+var funHike = {name, elevation}
+
+console.log(funHike) // {name : " Tallac", elevation : 9738}
+
+var name = "Tallac"
+var elevation = 9738
+var print = function() {
+    console.log(`${this.name} 산의 높이는 ${this.elevation}피트입니다.`) // 객체의 키에 접근하기 위해 this 사용
+}
+var funHike = {name,elevation,print}
+
+funHike.print() // Tallac 산의 높이는 9738피트입니다.
+
+</function>
+
+<function>
+// 예전 방식
+var skier = {
+    name: name,
+    sound: sound,
+    powderYell : function() {
+        var yell = this.sound.toUpperCase()
+        console.log(`${yell} ${yell} ${yell}!!!`)
+    },
+    spped: function(mph) {
+        this.speed = mph
+        console.log(`속력(mph):`,mph)
+    }
+}
+
+// 새로운 방식
+const skier = {
+    name,
+    sound,
+    powderYell() {
+        let yell = this.sound.toUpperCase()
+        console.log(`${yell} ${yell} ${yell}!!!`)
+    },
+    spped(mph){
+        this.spped = mph
+        console.log(`속력(mph) : `, mph)
+    }
+}
+ 
+</function>
+```
+
+4.3 스프레드 연산자
+- 스프레드 연산자: 세 개의 점(...)으로 이루어진 연산자로, 몇 가지 다른 역할을 담당한다
+```javascript
+<script>
+var peaks = ["대청봉", "중청봉", "소청봉"]
+var canyons = ["천불동계곡", "가야동계곡"]
+var seoraksan = [...peaks, ...canyons]
+
+console.log(seoraksan.join(', ')) // 대청봉, 중청봉, 소청봉, 천불동계곡, 가야동계곡
+
+</script>
+```
+
+## 5. 프라미스
+- 프라미스는 비동기적인 동작을 잘 다루기 위한 방법이다. 프라미스를 사용하면 여러가지 성공이나 실패를
+편리하게 단순한 성공이나 실패로 환원할 수 있다.
+
+## 6. 클래스
