--- a/ES6/5. 함수와 프로토타입 체이닝.md
+++ b/ES6/5. 함수와 프로토타입 체이닝.md
@@ -83,7 +83,7 @@
    // = 함수가 자신의 위치한 코드에 상관없이
    // 함수 선언문 형태로 정의한 함수의 유효 범위는
    // 코드의 맨 처음부터 시작한다는 것을 확인할 수 있다.
-   // 자바스크립트는.. 정말 모호하고 ㅄ같은 것 같다.
+   // 자바스크립트는.. 정말 모호하고
     add(2,3); // 5
    
    
@@ -101,7 +101,7 @@
    
    // 함수 표현식 형태로 add() 함수 정의
    // 이렇게 쓰는걸 권장 >>???? ㅡ.ㅡ
-   // ㅋㅋㅋ진짜 미개한 언어같다...풉 ㅋㅋㅋ 
+   // ㅋㅋㅋ
    var add = function (x,y) {
        return x + y;
    };
@@ -226,7 +226,23 @@
          ```
 
 3. 함수의 다양한 형태
+   
    3.1 콜백 함수
+      - 익명 함수의 대표적인 용도
+      - 코드를 통해 명시적으로 호출하는 함수가 아니라, 함수를 등록하기만 하고 어떤 이벤트가 발생했거나 특정 시점에 도달했을 때 시스템에서 호출되는 함수
+      - 이벤트 핸들러 처리에 사용, 웹 페이지가 로드 되거나 키보드가 입력되는 등의 DOM 이벤트가 발생할 경우, 브라우저는
+      정의된 DOM 이벤트에 해당하는 이벤트 핸들러를 실행시킴.
+      - window.onload 이벤트 핸들러 예제 코드 : 웹 페이지가 로드됐을 때 경고장을 띄워주는 예제
+      ```javascript
+       window.onload = function(){
+           alert('This is the callback function.');
+       };   
+      ```
+   
    3.2 즉시 실행 함수
+   
+   
    3.3 내부 함수
+   
+   
    3.4 함수를 리턴하는 함수
