Update 5. 함수와 프로토타입 체이닝.md

--- a/ES6/5. 함수와 프로토타입 체이닝.md
+++ b/ES6/5. 함수와 프로토타입 체이닝.md
@@ -233,16 +233,96 @@
       - 이벤트 핸들러 처리에 사용, 웹 페이지가 로드 되거나 키보드가 입력되는 등의 DOM 이벤트가 발생할 경우, 브라우저는
       정의된 DOM 이벤트에 해당하는 이벤트 핸들러를 실행시킴.
       - window.onload 이벤트 핸들러 예제 코드 : 웹 페이지가 로드됐을 때 경고장을 띄워주는 예제
+
       ```javascript
-       window.onload = function(){
+        window.onload = function(){
            alert('This is the callback function.');
        };   
       ```
-   
+    
    3.2 즉시 실행 함수
-   
+      - 함수를 정의함과 동시에 바로 실행하는 함수
+      
+      ```javascript
+        (function (name) {
+           console.log(name);
+         })('foo');   
+      ```
+      - 기본적으로 자바스크립트는 변수를 선언할 경우 프로그램 전체에서 접근할 수 있는 전역 유효 범위를 가지게 된다.
+      - 그러나 함수 내부에서 정의된 매개변수와 변수들은 함수 코드 내부에서만 유효할 뿐 함수 밖에서는 유효하지 않다.
+      - 따라서ㅏ 라이브러리 코드를 이렇게 즉시 실행 함수 내부에 정의하게 되면, 라이브러리 내의 변수들은 함수 외부에서 접근할 수 없다.
+      - 이걸 해결하기 위해 let const 쓰는듯?
    
    3.3 내부 함수
-   
-   
+      - 함수 내부에 정의된 함수. 클로저를 생성하거나 부모 함수 코드에서 외부에서의 접근을 막고 독립적인 헬퍼 함수를 구현하는 용도로 사용
+
+        ```javascript
+        // parent() 함수 정의
+        functon parent() {
+            var a = 100;
+            var b = 200;
+            
+            // child() 내부 함수 정의
+            function child() {
+                var b = 300;
+            
+                console.log(a);     // child 내부 함수에 변수 a가 선언되지 않았음에도
+                                    // child 함수가 호출됐을 때 값이 100이 출력된다.
+                                    // partent() 함수의 변수 a값에 접근하여 출력했기 때문
+                console.log(b);     // 변수 b는 child() 함수에 선언이 되어 있으므로
+                                    // parent() 함수의 b 변수가 아닌 child() 함수의 변수 b값이 바로 출력됐다.
+            }
+            
+            child();   
+        }
+        
+        parent();
+        child(); // child is not defined : 함수 내부에 선언되나 변수는 함수 외부에서 접근이 불가능함.
+        ```
+      
+      - 내부함수에서는 자신을 둘러싼 부모 함수의 변수에 접근이 가능하다. : 스코프 체이닝
+      - 내부 함수는 일반적으로 자신이 정의된 부모 함수 내부에서만 호출이 가능하다.
+      - 함수 외부에서도 특정 함수 스코프 안에 선언된 내부함수를 호출할 수 있다. 가령, 부모 함수에서 내부 함수를 외부로 리턴하면
+      부모 함수 밖에서도 내부 함수를 호출하는 것이 가능하다.
+      
+        ```javascript
+        function parent(){
+            var a = 100;
+            // child() 내부 함수 : 내부 함수를 함수 표현식으로 정의하고 
+            // child 함수 변수에 저장
+            var child = function (){
+                console.log(a);
+            }
+            
+            // child() 함수 반환
+            return child;
+        }
+        var inner = parent(); // parent() 함수가 호출되면 inner 변수에 child 함수 변수 값이 리턴됨
+                              // child 함수 변수는 내부 함수의 참조 값이 있으므로, 
+                              // 결국 inner 변수도 child() 내부 함수를 참조함
+        inner(); // 출력결과 : 100
+        // inner 변수에 함수 호출 연산자 () 를 붙여 함수 호출 구문을 만들면
+        // parent() 함수 스코프 밖에서도 내부 함수 child()가 호출됨.
+        // 클로저~
+        
+        ```
+      
    3.4 함수를 리턴하는 함수
+      - 자바스크립트에서는 함수 자체를 리턴할 수 ㅇ있음.
+      - 함수를 호출함과 동시에 다른 함수로 바꾸거나, 자기 자신을 재정의하는 함수를 구현할 수 있음
+```javascript
+// self() 함수
+var self = function() {
+    console.log('a');
+    return function () {
+        console.log('b');    
+    }
+}
+
+self = self(); // a
+self();        // b : self 함수 호출 후에 self함수 변수가 가리키는 함수가
+               // 원래 함수에서 리턴 받은 새로운 함수로 변경됐기 때문
+```  
+        
+        
+        
