Update 5. 함수와 프로토타입 체이닝.md

--- a/ES6/5. 함수와 프로토타입 체이닝.md
+++ b/ES6/5. 함수와 프로토타입 체이닝.md
@@ -310,19 +310,39 @@
    3.4 함수를 리턴하는 함수
       - 자바스크립트에서는 함수 자체를 리턴할 수 ㅇ있음.
       - 함수를 호출함과 동시에 다른 함수로 바꾸거나, 자기 자신을 재정의하는 함수를 구현할 수 있음
-```javascript
-// self() 함수
-var self = function() {
-    console.log('a');
-    return function () {
-        console.log('b');    
+    ```javascript
+    // self() 함수
+    var self = function() {
+        console.log('a');
+        return function () {
+            console.log('b');    
+        }
     }
-}
+    
+    self = self(); // a
+    self();        // b : self 함수 호출 후에 self함수 변수가 가리키는 함수가
+                   // 원래 함수에서 리턴 받은 새로운 함수로 변경됐기 때문
+    ```  
 
-self = self(); // a
-self();        // b : self 함수 호출 후에 self함수 변수가 가리키는 함수가
-               // 원래 함수에서 리턴 받은 새로운 함수로 변경됐기 때문
-```  
+4. 함수 호출과 this
+
+   4.1 arguments 객체
+      - 자바스크립트에서는 함수를 호출할 때 함수형식에 맞춰 인자를 넘기지 않아도 에러가 발생하지 않는다
+
+        ```javascript
+        function func(arg1, arg2){
+            console.log(arg1,arg2);
+        }
         
-        
-        
+        func(); // undefined undefined
+        func(1); // 1 undefined => 넘겨지지 않은 인자에는 undefined 값이 할당됨
+        func(1,2); // 1 2
+        func(1,2,3); // 1 2 => 초과된 인수는 무시됨
+        ```
+
+      - 자바스크립트의 이러한 특성 때문에 함수 코드를 작성할 때, 런타임 시에 호출된 인자의 개수를 확인하고 이에 따라 동작을 다르게 해줘야 할 경우가 있다.
+      이를 가능케 하는게 바로...arguments 객체 !
+      - 자바스크립트에서는 함수를 호출할 때 인수들과 함께 암묵적으로 arguments 객체가 함수 내부로 전달됨
+      - arguments 객체는 함수를 호출할 때 넘긴 인자들이 배열 형태로 저장된 객체를 의미
+      ![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdPcMAV%2FbtqM9O7N1R1%2FDGBXb2b4MvaC8RdaMkFgD0%2Fimg.png)
+      
