--- a/React/3.  JSX.md
+++ b/React/3.  JSX.md
@@ -1,6 +1,7 @@
 ## 1. JSX란
    - JSX는 자바스크립트의 확장 문법
    - 리액트 프로젝트를 만들 때는 $ yarn create react-app <프로젝트 이름> 명령어 사용
+   - 실행할땐 $ cd 프로젝트명 $ yarn start
    - src/App.js
    ```javascript
       import logo from './logo.svg'; //
@@ -105,20 +106,120 @@
 
       ```
    4. AND 연산자(&&)를 사용한 조건부 렌더링
-   ```javascript
-    import React, {Fragment} from 'react';
-    import logo from './logo.svg';
-    import './App.css';
+      ```javascript
+       import React, {Fragment} from 'react';
+       import logo from './logo.svg';
+       import './App.css';
 
-    function App() {
-      const name = '리액트';
-      return (
-        <div>
-          {name === '리액트' && <h1>리액트입니다.</h1>}
-        </div>
-      );
-    }
+       function App() {
+         const name = '리액트';
+         return (
+           <div>
+             {name === '리액트' && <h1>리액트입니다.</h1>}
+           </div>
+         );
+       }
 
-    export default App;
+       export default App;
 
-   ```
+      ```
+   
+   5. undefined를 렌더링하지 않기
+      - src/App.js => 오류 발생
+      ```javascript
+      import React, {Fragment} from 'react';
+      import logo from './logo.svg';
+      import './App.css';
+
+      function App() {
+        const name = undefined;
+        return name;
+      }
+
+      export default App;
+      ```
+      - 어떤 값이 undefined일 수도 있다면, OR(||) 연산자를 사용하면 해당 값이 undefined일 때 사용할 값을 지정할 수 있음
+      ```javascript
+      import React, {Fragment} from 'react';
+      import logo from './logo.svg';
+      import './App.css';
+
+      function App() {
+        const name = undefined;
+        return name || '값이 undefined입니다.';
+      }
+
+      export default App;
+      ```
+      - JSX 내부에서 undefined를 렌더링하는 것은 괜찮음
+      ```javascript
+      import React, {Fragment} from 'react';
+      import logo from './logo.svg';
+      import './App.css';
+
+      function App() {
+        const name = undefined;
+        return <div>{name}</div>;
+      }
+
+      export default App;
+
+      ```
+   
+   6. 인라인 스타일링
+      - 리액트에서 DOM 요소에 스타일을 적용할 때는 문자열 형태로 넣는 것이 아니라 객체 형태로 넣어주어야 함
+      - 카멜 표기법 사용 ex) background-color -> backgroudnColor
+      ```javascript
+      import React, {Fragment} from 'react';
+      import logo from './logo.svg';
+      import './App.css';
+
+      function App() {
+        const name = '리액트!!';
+        const style = {
+          // background-color는 backgroundColor와 같이 -가 사라지고 카멜 표기법으로 작성됨
+          backgroundColor : 'black',
+          color : 'aqua',
+          fontSize : '48px', // font-size -> fontSize
+          fontWeight : 'bold', // font-weight -> fontWeight
+          padding : 16 // 단위를 생략하면 px로 지정
+        }
+
+        return <div style = {style}>{name}</div>;
+      }
+
+      export default App;      
+      ```
+   
+   7. class 대신 className
+      - JSX에서는 class가 아닌 className으로 설정해 주어야 함
+      - src/App.css
+      ```css
+      .react {
+        background : aqua;
+        color : black;
+        fontSize : 48px; 
+        fontWeight : bold; 
+        padding : 16 ;
+      }
+      
+      ```
+      - src/App.js
+      ```javascript
+      import React, {Fragment} from 'react';
+      import logo from './logo.svg';
+      import './App.css';
+
+      function App() {
+        const name = '리액트!!';
+        return <div className="react">{name}</div>;
+      }
+
+      export default App;      
+      ```
+      
+   8. 꼭 닫아야 하는 태그
+
+## 3. ESLint와 Prettier 적용하기
+   1. ESLInt
+      - ESLint는 문법 검사 도구이고, Prettier는 코드 스타일 자동 정리 도구
