--- a/React/4. 컴포넌트.md
+++ b/React/4. 컴포넌트.md
@@ -1,6 +1,6 @@
 ## 1. 클래스형 컴포넌트
    - 컴포넌트를 선언하는 방식은 두 가지 -> 함수형 컴포넌트, 클래스형 컴포넌트
-   - 클래스형 컴포넌트
+   - 클래스형 컴포넌트 : state 기능 및 라이프사이클 기능을 사용할 수 있음, 메서드를 정의할 수 있음
    ```javascript
     import React, {Fragment} from 'react';
     import { Component } from 'react/cjs/react.development';
@@ -13,3 +13,272 @@
     }
     export default App;
    ```
+   > ES6의 클래스 문법
+   ```javascript
+   class Dog {
+      constructor(name){
+         this.name = name;
+      }
+      
+      say() {
+         console.log(this.name + ' : 멍멍');
+      }
+   }
+  
+   const dog = new Dog('흰둥이');
+   dog.say();  // 흰둥이 : 멍멍
+   ```
+   - 클래스형 컴포넌트 vs 함수형 컴포넌트
+   
+   |특징|클래스형 컴포넌트|함수형 컴포넌트|
+   |----------------|----|-------------|
+   |<b>선언방식</b>|불편함|편함|
+   |<b>메모리 자원</b>|많이 사용함|덜사용함|
+   |<b>배포 후 파일 크기</b>|큼|작음|
+   |<b>state, 라이프사이클 API</b>|사용가능|사용불가<br>=> Hooks 기능 도입되며 해결|
+
+## 2. 첫 컴포넌트 생성
+   - 컴포넌트 생성 : 파일 만들기 → 코드 작성하기 → 모듈 내보내기 및 불러오기
+   1. src 디렉터리에 MyComponent.js 파일 생성
+   ```javascript
+   import React from 'react';
+   const MyComponent () => {
+       return <div>나의 새롭고 멋진 컴포넌트</div>
+   }
+
+   export default MyComponent;   
+   ```
+   > ES6의 화살표 함수 = 함수를 파라미터로 전달할 때 유용
+   ```javascript
+   setTimeout(function() {
+      console.log('hello world');
+   }, 1000);
+   
+   setTimeout(() => {
+      console.log('hello world');
+   }), 1000);
+   // 일반 함수는 자신이 종속된 객체를this로 가리키며 화살표 함수는 자신이 종속된 인스턴스를 가리킴
+   ```
+   
+   2. 모듈 내보내기 및 불러내기
+      1. 모듈 내보내기 (export)
+         ```javascript
+         import React from 'react';
+
+         const MyComponent = () => {
+             return <div>나의 새롭고 멋진 컴포넌트</div>
+         }
+
+         export default MyComponent; // 다른 파일에서 이 파일을 import할 때,
+                                     // 위에서 선언한 MyComponent 클래스를 불러오도록 설정
+         
+         ```
+      2. 모듈 불러오기 (import)
+         - src/App.js
+         ```javascript
+         import React, {Fragment} from 'react';
+         import MyComponent from './MyComponent';
+
+         const App = () => {
+           return <MyComponent />;
+         }
+
+         export default App;
+         
+         ```
+         
+   3. props
+   - props : properties를 줄인 표현으로 <b>컴포넌트 속성을 설정</b>할 때 사용하는 요소
+   - props 값은 해당 컴포넌트를 불러와 사용하는 부모 컴포넌트에서 설정할 수 있음
+      1. JSX 내부에서 props 렌더링
+         - MyComponent.js : 해당 컴포넌트에서 name이라는 props렌더링
+         ```javascript
+         import React from 'react';
+
+         const MyComponent = props => {
+             return <div>안녕하세요, 제 이름은 {props.name} 입니다. </div>
+         }
+
+         export default MyComponent;          
+         ```
+         
+      2. 컴포넌트를 사용할 때 props 값을 지정
+         - App.js : App 컴포넌트에서 MyComponent의 props 값 지정
+         ```javascript
+         import React, {Fragment} from 'react';
+         import MyComponent from './MyComponent';
+
+         const App = () => {
+           return <MyComponent name = "React"/>;
+         }
+
+         export default App;
+         ```
+    
+      3. props 기본값 설정 : defaultProps
+         - MyComponent.js
+         ```javascript
+         import React from 'react';
+
+         const MyComponent = props => {
+             return <div>안녕하세요, 제 이름은 {props.name} 입니다. </div>
+         };
+
+         MyComponent.defaultProps = {
+             name : '기본 이름' // name이 설정되지 않았을 때 기본값으로 정의됨
+         }
+
+         export default MyComponent; 
+         
+         ```
+      4. 태그 사이의 내용을 보여주는 children
+         - children : 리액트 컴포넌트를 사용할 때 컴포넌트 태그 사이의 내용을 보여줌
+         - App.js
+         ```javascript
+         import React, {Fragment} from 'react';
+         import MyComponent from './MyComponent';
+
+         const App = () => {
+           return <MyComponent>리액트</MyComponent>;
+         }
+
+         export default App;
+         ```
+         - MyComponent.js
+         ```javascript
+         import React from 'react';
+
+         const MyComponent = props => {
+             return( 
+             <div>안녕하세요, 제 이름은 {props.name} 입니다. <br></br>
+             children 값은 {props.children}
+             입니다.
+             </div>
+             );
+         };
+
+         MyComponent.defaultProps = {
+             name : '기본 이름' // name이 설정되지 않았을 때 기본값으로 정의됨
+         }
+
+         export default MyComponent; 
+         ```
+         
+      5. 비구조화 할당 문법을 통해 props 내부 값 추출하기
+         - MyComponent.js
+         ```javascript
+         import React from 'react';
+
+         const MyComponent = props => {
+             const { name, children } = props;
+             return( 
+             <div>안녕하세요, 제 이름은 {name} 입니다. <br></br>
+             children 값은 {children}
+             입니다.
+             </div>
+             );
+         };
+
+         MyComponent.defaultProps = {
+             name : '기본 이름'
+         }
+
+         export default MyComponent; 
+         ```
+         
+         ```javascript
+         import React from 'react';
+
+         const MyComponent =({name, children}) => {
+             return( 
+             <div>안녕하세요, 제 이름은 {name} 입니다. <br></br>
+             children 값은 {children}
+             입니다.
+             </div>
+             );
+         };
+
+         MyComponent.defaultProps = {
+             name : '기본 이름'
+         }
+
+         export default MyComponent; 
+         ```
+
+      6. propTypes를 통한 props 검증
+         - 컴포넌트의 필수 props를 지정하거나 props의 타입을 지정할 떄는 propTypes를 사용함.
+         - 컴포넌트의 propTypes를 지정하는 방법은 defaultProp을 설정하는 것과 비슷
+         - propTypes를 사용하려면 코드 상단에 import 구문을 사용하여 불러온다
+         ```javascript
+         import React from 'react';
+         import PropTypes from 'prop-types';
+
+         const MyComponent =({name, children}) => {
+             return( 
+             <div>안녕하세요, 제 이름은 {name} 입니다. <br></br>
+             children 값은 {children}
+             입니다.
+             </div>
+             );
+         };
+
+         MyComponent.defaultProps = {
+             name : '기본 이름'
+         }
+
+         MyComponent.propTypes ={
+             name: PropTypes.string // name 값은 무조건 문자열(string) 형태로 전달해야 된다는 것을 의미
+         };
+
+         export default MyComponent; 
+         ```
+         - isRequired를 사용하여 필수 propTypes 설정
+            - propTypes를 지정하지 않았을 때 경고 메시지를 띄워 주는 작업
+            - propTypes를 지정할 때 뒤에 isRequired를 붙여주면 됨
+            - favoriteNumber라는 숫자를 필수 props로 지정
+            - MyComponent.js
+            ```javascript
+            import React from 'react';
+            import PropTypes from 'prop-types';
+
+            const MyComponent =({name, children,favoriteNumber}) => {
+                return( 
+                <div>안녕하세요, 제 이름은 {name} 입니다. <br/>
+                children 값은 {children}
+                입니다.
+                <br/>
+                제가 좋아하는 숫자는 {favoriteNumber} 입니다.
+                </div>
+                );
+            };
+
+            MyComponent.defaultProps = {
+                name : '기본 이름'
+            }
+
+            MyComponent.propTypes ={
+                name: PropTypes.string,
+                favoriteNumber : PropTypes.number.isRequired
+
+            };
+
+            export default MyComponent; 
+            ```
+            - App.js
+            ```javascript
+            import React, {Fragment} from 'react';
+            import MyComponent from './MyComponent';
+
+            const App = () => {
+              return (
+              <MyComponent name = "React" favoriteNumber = {1}>
+                리액트
+              </MyComponent>
+              );
+            }
+
+            export default App;
+            ```
+
+      7. 클래스형 컴포넌트에서 props 사용하기
+         - 
