--- a/React/4. 컴포넌트.md
+++ b/React/4. 컴포넌트.md
@@ -281,4 +281,149 @@
             ```
 
       7. 클래스형 컴포넌트에서 props 사용하기
-         - ㅋㅋㅋ
+         ```javascript
+         import React, {Component} from 'react';
+         import PropTypes from 'prop-types';
+
+         class MyComponent extends Component {
+             render(){
+                 const {name, favoriteNumber, children} = this.props; // 비구조화 할당
+                 return (
+                     <div>
+                         안녕하세요, 제 이름은 {name} 입니다. <br />
+                         children 값은 {children}
+                         입니다.
+                         <br/>
+                         제가 좋아하는 숫자는 {favoriteNumber} 입니다.
+                     </div>
+                 )
+             }
+         }
+
+         MyComponent.defaultProps = {
+             name : '기본 이름'
+         };
+
+         MyComponent.propTypes = {
+             name : PropTypes.string,
+             favoriteNumber : PropTypes.number.isRequired
+         }
+
+         export default MyComponent;
+         ```
+## 3. state
+   - state : 컴포넌트 내부에서 바뀔 수 있는 값
+   - 클래스형 컴포넌트가 지니고 있는 state, 함수형 컴포넌트에서 useState 함수를 통해 사용하는 state
+   1. 클래스형 컴포넌트의 state
+      - Counter.js
+      ```javascript
+      import React, {Component} from 'react';
+
+      class Counter extends Component {
+          // 컴포넌트에 state를 설정할 때는 다음과 같이 constructor 메서드를 작성하여 설정
+          constructor(props){
+              // 클래스형 컴포넌트에서 constructor를 작성할 떄는
+              // 반드시 super(props)를 호출해 줘야 함
+              // 이 함수가 호출되면 현재 클래스형 컴포넌트가 상속받고 있는
+              // 리액트의 Component 클래스가 지닌 생성자 함수를 호출해 줌
+              super(props);
+              // state의 초깃값 설정하기
+              this.state = {
+                  number : 0
+              };
+          }
+
+          render(){
+              const {number} = this.state; // state 조회할 때는 this.state로 조회한다
+              return (
+                  <div>
+                      <h1>{number}</h1>
+                      <button 
+                      // onClick을 통해 버튼이 클릭되었을 때 호출한 함수를 지정
+                      onClick = { () => {
+                          // this.setState를 사용하여 state에 새로운 값을 넣을 수 있음
+                          this.setState({number : number +1});
+                      }    
+                      }>
+                          +1
+                      </button>
+                  </div>
+              )
+
+          }
+
+      }
+
+      export default Counter;
+      ```
+         1. state 객체 안에 여러 값이 있을 때
+            - Counter.js
+            ```javascript
+            import React, {Component} from 'react';
+
+            class Counter extends Component {
+                constructor(props){
+                    super(props);
+                    this.state = {
+                        number : 0,
+                        fixedNumber : 0
+                    };
+                }
+
+                render(){
+                    const {number , fixedNumber} = this.state; 
+                    return (
+                        <div>
+                            <h1>{number}</h1>
+                            <h2> 바뀌지 않는 값 : { fixedNumber}</h2>
+                            <button 
+                            onClick = { () => {
+                                this.setState({number : number +1});
+                            }    
+                            }>
+                                +1
+                            </button>
+                        </div>
+                    )
+
+                }
+
+            }
+
+            export default Counter;
+            ```
+         2. state 를 constructor에서 꺼내기
+            - Counter.js
+            ```javascript
+            import React, {Component} from 'react';
+            class Counter extends Component {
+                state = {
+                    number : 0,
+                    fixedNumber : 0
+                };
+
+                render(){
+                    const {number , fixedNumber} = this.state; 
+                    return (
+                        <div>
+                            <h1>{number}</h1>
+                            <h2> 바뀌지 않는 값 : { fixedNumber}</h2>
+                            <button 
+                            onClick = { () => {
+                                this.setState({number : number +1});
+                            }    
+                            }>
+                                +1
+                            </button>
+                        </div>
+                    )
+
+                }
+
+            }
+
+            export default Counter;
+            ```
+         3. this.setState에 객체 대신 함수 인자 전달하기
+            - this.setState를 ㅅ사용하여 state 값을 업데이트 할 때는 상태가 비동기적으로 업데이트 된다
+            - Counter.js - button onClick
