--- a/React/4. 컴포넌트.md
+++ b/React/4. 컴포넌트.md
@@ -425,5 +425,96 @@
             export default Counter;
             ```
          3. this.setState에 객체 대신 함수 인자 전달하기
-            - this.setState를 ㅅ사용하여 state 값을 업데이트 할 때는 상태가 비동기적으로 업데이트 된다
-            - Counter.js - button onClick
+            - this.setState를 사용하여 state 값을 업데이트 할 때는 상태가 비동기적으로 업데이트 된다
+            - 만약 onClick에 설정한 함수 내부에서 this.setState를 두 번 호출한다면? : Counter.js 
+            ```javascript
+            import React, {Component} from 'react';
+
+            class Counter extends Component {
+                state = {
+                    number : 0,
+                    fixedNumber : 0
+                };
+
+                render(){
+                    const {number , fixedNumber} = this.state; 
+                    return (
+                        <div>
+                            <h1>{number}</h1>
+                            <h2> 바뀌지 않는 값 : { fixedNumber}</h2>
+                            <button 
+                            onClick = { () => {
+                                this.setState({number : number +1});
+                                this.setState({number: this.state.number +1});
+                                //  버튼을 클릭할 때 숫자가 1ㅆ씩 더해짐.
+                                //  this.setState를 사용한다고 해서 state 값이 바로 바뀌지는 않기 때문
+                                // => this.seteState를 사용할 때 객체 대신 함수를 인자로 넣어주자
+                            }    
+                            }>
+                                +1
+                            </button>
+                        </div>
+                    )
+
+                }
+
+            }
+
+            export default Counter;
+            
+            ```
+            
+            - this.setState의 인자를 함수를 넣어 줄 때는 코드를 다음과 같은 형식으로 작성
+            ```javascript
+            this.setState((prevState, props) => {
+               // prevState : 기존 상태, propss : 현재 지니고 있는  props 
+               // props 생략 가능
+               return {
+                  // 업데이트하고싶은내용
+               }
+            })
+            ```
+            
+            - Conter.js
+            ```javascript
+            import React, {Component} from 'react';
+
+            class Counter extends Component {
+                state = {
+                    number : 0,
+                    fixedNumber : 0
+                };
+
+                render(){
+                    const {number , fixedNumber} = this.state; 
+                    return (
+                        <div>
+                            <h1>{number}</h1>
+                            <h2> 바뀌지 않는 값 : { fixedNumber}</h2>
+                            <button 
+                            onClick = { () => {
+                                // 객체 대신 함수를 인자로 넣어줌
+                                // prevState : 기존 상태, propss : 현재 지니고 있는  props 
+                                this.setState(prevState => {
+                                    return {
+                                        number : prevState.number+1
+                                    };
+                                });
+                                // 위 코드와 아래 코드는 완전히 똑같은 기능을 함
+                                // 아래 코드는 함수에서 바로 객체를 반환한다는 의미
+                                this.setState(prevState => ({
+                                    number : prevState.number +1
+                                }));
+                            }}
+                            >
+                                +1
+                            </button>
+                        </div>
+                    )
+
+                }
+
+            }
+
+            export default Counter;
+            ```
