Update 5. 이벤트 핸들링.md

--- a/React/5. 이벤트 핸들링.md
+++ b/React/5. 이벤트 핸들링.md
@@ -25,7 +25,8 @@
 
       export default EventPractice;
       ```
-      -App.js
+      
+      - App.js
       ```javascript
       import React, {Fragment} from 'react';
       import EventPractice from'./EventPractice';
@@ -38,28 +39,30 @@
 
       ```
    2. onChange 이벤트 핸들링하기
+   
       1. onChange 이벤트 설정
-      ```javascript
-      import React, {Component} from 'react';
-      class EventPractice extends Component {
-          render() {
-              return (
-                  <div>
-                      <h1>이벤트 연습</h1>
-                      <input
-                          type = "text"
-                          name = "message"
-                          placeholder = "아무거나 입력해 보세요"
-                          onChange = {
-                              (e) => { // e 객체 : 웹 브라우저의 네이티브 이벤트를 감싸는 객체
-                                  console.log(e.target.valule);
-                              }
-                          }
-                      />
-                  </div>
-              )
-          }
-      }
+         - EventPractice.js
+         ```javascript
+         import React, {Component} from 'react';
+         class EventPractice extends Component {
+             render() {
+                 return (
+                     <div>
+                         <h1>이벤트 연습</h1>
+                         <input
+                             type = "text"
+                             name = "message"
+                             placeholder = "아무거나 입력해 보세요"
+                             onChange = {
+                                 (e) => { // e 객체 : 웹 브라우저의 네이티브 이벤트를 감싸는 객체
+                                     console.log(e.target.valule);
+                                 }
+                             }
+                         />
+                     </div>
+                 )
+             }
+         }
 
-      export default EventPractice;
-      ```
+            export default EventPractice;
+         ```
