Update 5. 이벤트 핸들링.md

--- a/React/5. 이벤트 핸들링.md
+++ b/React/5. 이벤트 핸들링.md
@@ -64,5 +64,90 @@
              }
          }
 
-            export default EventPractice;
+         export default EventPractice;
          ```
+
+      2. state에 input 값 담기
+         - 생성자 메서드인 oncstructor에서 state 초깃값 설정, 이벤트 핸들링 함수 내부에서 this.setState 메서드를 호출하여 state 업데이트
+         - EventPractice.js
+         ```javascript
+         import React, {Component} from 'react';
+
+         class EventPractice extends Component {
+             state = {
+                 message : ''
+             }
+             render() {
+                 return (
+                     <div>
+                         <h1>이벤트 연습</h1>
+                         <input
+                             type = "text"
+                             name = "message"
+                             placeholder = "아무거나 입력해 보세요"
+                             value = {this.state.message}
+                             onChange = {
+                                 (e) => { 
+                                     this.setState({
+                                        message : e.target.value
+                                     })
+                                 }
+                             }
+                         />
+                     </div>
+                 )
+             }
+         }
+
+         export default EventPractice;
+         ```
+         
+      3. 버튼을 누를 때 commnet 값을 공백으로 설정
+         - 클릭 이벤트 발생 시 현재 comment 값을 메시지 박스로 띄운 ㅎ후 comment 값을 공백으로 설정
+         - EventPratice.js
+         ```javascript
+         import React, {Component} from 'react';
+
+         class EventPractice extends Component {
+             state = {
+                 message : ''
+             }
+
+         render() {
+                 return (
+                     <div>
+                         <h1>이벤트 연습</h1>
+                         <input
+                             type = "text"
+                             name = "message"
+                             placeholder = "아무거나 입력해 보세요"
+                             value = {this.state.message}
+                             onChange = {
+                                 (e) => { 
+                                     this.setState({
+                                         message : e.target.value
+                                     })
+                                 }
+                             }
+                         />
+                         <button onClick = {
+                             ()=> {
+                                 alert(this.state.message);
+                                 this.setState({
+                                     message : ''
+                                 });
+                             }
+                         }>확인</button>
+                     </div>
+                 );
+             }
+         }
+
+         export default EventPractice;
+         ```
+   
+   3. 임의 메서드 만들기
+      - onChange와  onClick에 전달한 함수를 따로 빼내서 컴포넌트 임의 메서드 만들기
+      1. 기본 방식
+         - EventPractice.js
+         
