Update 2. 비동기 프로그래밍.md

--- a/React/3. react-study/2. 비동기 프로그래밍.md
+++ b/React/3. react-study/2. 비동기 프로그래밍.md
@@ -243,3 +243,49 @@
 
 ## 3. async / await
 
+- 동기적으로 실행되는 것처럼 만듦
+- **async** : 함수 앞에 쓰면 코드 블록을 자동으로 Promise로 바꿈.  async function() : await 키워드가 비동기 코드를 호출할 수 있게 해주는 함수
+
+- **await** : 어떠한 Promise 기반 함수 앞에 놓을 수 있음. 코드의 Promise가 fulfil 될 때 까지 잠시 중단하고 결과를 반환. 실행을 기다리는 다른 코드들을 중짓키ㅣ지 않고 그대로 실행되게 함
+
+```javascript
+// fetch() 
+fetch('coffee.jpg')
+.then(response => response.blob())
+.then(myBlob => {
+  let objectURL = URL.createObjectURL(myBlob);
+  let image = document.createElement('img');
+  image.src = objectURL;
+  document.body.appendChild(image);
+})
+.catch(e => {
+  console.log('There has been a problem with your fetch operation: ' + e.message);
+});
+
+// async/await
+async function myFetch() {
+  let response = await fetch('coffee.jpg');
+  let myBlob = await response.blob();
+
+  let objectURL = URL.createObjectURL(myBlob);
+  let image = document.createElement('img');
+  image.src = objectURL;
+  document.body.appendChild(image);
+}
+
+myFetch()
+.catch(e => {
+  console.log('There has been a problem with your fetch operation: ' + e.message);
+});
+```
+
+  - `await`는 `async function` 안에서만 쓸 수 있다.
+
+    - await 키워드는 비동기 코드를 일시 중지하여 비동기 함수 호출이 결과를 반환할 떄 까지 기다리게 함.
+
+    ```javascript
+    let response = await fetch('coffe.jpg');
+    ```
+
+    - fulfiled된 fetch() Promise에서 반환된 응답은 사용할 수 있게 되면 response 변수에 할당됨
+
